--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,37 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{sesana:2006,
+       author = {{Sesana}, A. and {Haardt}, F. and {Madau}, P.},
+        title = "{Interaction of Massive Black Hole Binaries with Their Stellar Environment. I. Ejection of Hypervelocity Stars}",
+      journal = {ApJ},
+     keywords = {Black Hole Physics, Methods: Numerical, Stellar Dynamics, Astrophysics},
+         year = "2006",
+        month = "Nov",
+       volume = {651},
+        pages = {392-400},
+          doi = {10.1086/507596},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0604299},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJ...651..392S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hills:1983,
+   author = {{Hills}, J.~G.},
+    title = "{The effect of low-velocity, low-mass intruders (collisionless gas) on the dynamical evolution of a binary system}",
+  journal = {AJ},
+ keywords = {Astrodynamics, Binary Stars, Celestial Mechanics, Stellar Motions, Computerized Simulation, Eccentric Orbits, Mass Ratios, Orbital Velocity, Stellar Mass, Stellar Models},
+     year = 1983,
+    month = aug,
+   volume = 88,
+    pages = {1269-1283},
+      doi = {10.1086/113418},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1983AJ.....88.1269H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{zhang:2019,
        author = {{Zhang}, T. and {Liao}, S. and {Li}, M. and {Gao}, L.},
         title = "{The optimal gravitational softening length for cosmological N-body simulations}",
@@ -260,8 +291,8 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{rantala:2017,
-       author = {{Rantala}, Antti and {Pihajoki}, Pauli and {Johansson}, Peter H. and
-         {Naab}, Thorsten and {Lah{\'e}n}, Natalia and {Sawala}, Till},
+       author = {{Rantala}, A. and {Pihajoki}, P. and {Johansson}, P.~H. and
+         {Naab}, T. and {Lah{\'e}n}, N. and {Sawala}, T.},
         title = "{Post-Newtonian Dynamical Modeling of Supermassive Black Holes in Galactic-scale Simulations}",
       journal = {ApJ},
      keywords = {black hole physics, galaxies: evolution, galaxies: nuclei, methods: numerical, stars: kinematics and dynamics, Astrophysics - Astrophysics of Galaxies},
@@ -469,7 +500,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{quinlan:1996,
-       author = {{Quinlan}, Gerald D.},
+       author = {{Quinlan}, G.~D.},
         title = "{The dynamical evolution of massive black hole binaries I. Hardening in a fixed stellar background}",
       journal = {New Astronomy},
      keywords = {Astrophysics},
@@ -717,7 +748,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{marconi:2003,
-       author = {{Marconi}, Alessandro and {Hunt}, Leslie K.},
+       author = {{Marconi}, A. and {Hunt}, L.~K.},
         title = "{The Relation between Black Hole Mass, Bulge Mass, and Near-Infrared
         Luminosity}",
       journal = {ApJ},
